kubernetes/backend-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
  namespace: default
  labels:
    app: backend
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      color: green
  template:
    metadata:
      labels:
        app: backend
        color: green
    spec:
      containers:
        - name: backend
          image: docker.io/preethamvs6/ecommerce-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: backend-port
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 15
