kubernetes/frontend-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  namespace: default
  labels:
    app: frontend
    color: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      color: blue
  template:
    metadata:
      labels:
        app: frontend
        color: blue
    spec:
      containers:
        - name: frontend
          image: docker.io/preethamvs6/ecommerce-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: frontend-port
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
