kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: backend
    color: blue
  type: ClusterIP
